# nvml_ex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  checksum-Elixir.Nvml.Native.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: nvml.ex
lib/nvml/: application.ex  backend.ex  native.ex  native_mock.ex
native/nvml_native/: Cargo.toml  README.md
native/nvml_native/src/: lib.rs
test/: nvml_test.exs
